# RouteRight-AI

./: .gitignore  Readme.md  run_dev.sh
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/agents/: formatter.py  orchestrator.py  place_search.py  routing.py  task_decomposer.py  validator.py
backend/app/graph/: workflow.py
backend/app/models/: graph_state.py  request_models.py  response_models.py
backend/app/services/: cache.py  foursquare.py  routing_service.py  serpapi_service.py
backend/app/utils/: config.py
frontend/: .env.example  _headers  index.html  manifest.json  package-lock.json  package.json
frontend/public/: robots.txt
frontend/src/: App.jsx  global.css  main.jsx  theme.js
frontend/src/components/: FeedbackCTA.jsx  Footer.jsx  Header.jsx  HeroInput.jsx  MapPreview.jsx  PlanListCard.jsx  ProgressCarousel.jsx  RouteStepperCard.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/services/: api.js
frontend/src/stores/: planStore.js
frontend/src/utils/: constants.js
